terraform/main.tf
resource "aws_instance" "ec2_example" {
  ami           = var.ami_id
  instance_type = var.instance_type

  user_data = file("${path.module}/../scripts/startup.sh")

  tags = {
    Name = "FEGF-EC2"
  }
}

resource "aws_security_group" "ec2_sg" {
  name        = "fegf_ec2_sg"
  description = "Allow SSH and HTTP"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
